Add footer section

--- a/index.html
+++ b/index.html
@@ -536,6 +536,62 @@
         </section>
 
 
+        <!-- footer -->
+        <footer class="bg-body-tertiary footer">
+            <div class="container py-5">
+                <div class="row d-flex justify-content-center align-items-center">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="social-handles ">
+                            <h4 class="fw-semibold pb-3 text-uppercase text-center">Stay connected</h4>
+                            <div class="social-icons d-flex gap-3 d-flex justify-content-center align-items-center">
+                                <a href="#" class="text-decoration-none"><i class="bi bi-facebook fs-3"></i></a>
+                                <a href="#" class="text-decoration-none"><i class="bi bi-twitter fs-3"></i></a>
+                                <a href="#" class="text-decoration-none"><i class="bi bi-instagram fs-3"></i></a>
+                                <a href="#" class="text-decoration-none"><i class="bi bi-linkedin fs-3"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="location-container">
+                            <h4 class="fw-semibold pb-3 text-uppercase text-center"> Find Location at</h4>
+                            <div class="location d-flex flex-column justify-content-center align-items-center>
+                                <div class=" first-location">
+                                <p class="fw-normal fs-6 p-3"><i class="bi bi-geo-alt-fill"></i> 4th Floor, Muallim
+                                    Arcade, Wayanad Road, Near MC College Kozhikode
+                                    Pin: 673001 </p>
+                            </div>
+                            <div class="second-location">
+                                <p class="fw-normal fs-6 p-3"><i class="bi bi-geo-alt-fill"></i> Door No: 38/3989,
+                                    Opposite Metro Pillar No.489,
+                                    Edappally South, Palarivattom Kochi Pin: 682025</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="contact-info">
+                            <h4 class="fw-semibold pb-3 text-uppercase text-center"> Contact Us</h4>
+                            <div class="contact d-flex justify-content-center align-items-center flex-column">
+                                <p class=" fw-normal fs-6 "><i class=" bi bi-telephone-fill me-2"></i> +91 1234567890
+                                </p>
+                                <p class="fw-normal fs-6 "><i class="bi bi-telephone-fill me-2"></i> +91 1234567890</p>
+
+                                <p class="fw-normal fs-6 "><i class="bi bi-envelope-fill me-2"></i>example@gmail.com
+                                </p>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <p class="fw-bold text-center pt-3 pb-2 "> Made with ❤️ by <a href="https://github.com/rijoksd"
+                        target="_blank">Rijo Sebastian</a></p>
+            </div>
+            
+        </footer>
+
 
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
