Update navbar dropdown

--- a/index.html
+++ b/index.html
@@ -49,12 +49,27 @@
                                         Internship
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="#">
+                                                <img src="./assets/images/python-icon.png" alt="icon">
+                                                <span> Python-Django Fullstak</span>
+                                            </a></li>
+                                        <li><a class="dropdown-item" href="#">
+                                                <img src="./assets/images/mern-icon.png" alt="icon">
+                                                <span> Mern Fullstak</span>
+                                            </a></li>
+                                        <li><a class="dropdown-item" href="#">
+                                                <img src="./assets/images/flutter-icon.png" alt="icon">
+                                                <span> Flutter Mobile App</span>
+                                            </a></li>
+                                        <li><a class="dropdown-item" href="#">
+                                                <img src="./assets/images/react-js-icon.png" alt="icon">
+                                                <span> React Js</span>
+                                            </a></li>
+                                        <li><a class="dropdown-item" href="#">
+                                                <img src="./assets/images/aws-icon.png" alt="icon">
+                                                <span> AWS</span>
+                                            </a></li>
+
                                     </ul>
                                 </li>
                                 <li class="nav-item">
@@ -589,7 +604,7 @@
                 <p class="fw-bold text-center pt-3 pb-2 "> Made with ❤️ by <a href="https://github.com/rijoksd"
                         target="_blank">Rijo Sebastian</a></p>
             </div>
-            
+
         </footer>
 
 
